...

    <string name="main_menu_title_barter_map_post_barter"><![CDATA[Barter Map=>Post Barter]]></string>
    <string name="main_menu_title_manage_my_barter">Manage My Barter</string>
    <string name="main_menu_title_my_profile">My Profile</string>
    <string name="main_menu_title_logout">Logout</string>
    <string name="menu_main_title_search">Search</string>
    <string name="nav_main_menu_title_my_interested_barters">My Interested Barters</string>
    <string name="nav_main_menu_title_quotes_to_me">Quotes To Me</string>
    <string name="nav_main_menu_title_barter_world">Barter World</string>
    <string name="nav_main_menu_title_barter_map_post_barter"><![CDATA[Barter Map=>Post Barter]]></string>
    <string name="nav_main_menu_title_manage_my_barter">Manage My Barter</string>
    <string name="nav_main_menu_title_welcome_to_barter_trade">Welcome to Barter Trade</string>
    <string name="nav_main_menu_title_profile">Profile</string>
    <string name="nav_main_menu_title_log_out">Log Out</string>
...
