<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_barter_world"
            android:icon="@mipmap/ic_barter_world"
            android:title="Barter World" />
        <item
            android:id="@+id/nav_barter_map"
            android:icon="@mipmap/ic_barter_map"
            android:title="Barter Map" />

    </group>

    <item android:title="Welcome to Barter Trade">
        <menu>
            <item
                android:id="@+id/nav_barter_profile"
                android:icon="@mipmap/ic_barter_profile"
                android:title="Profile" />
            <item
                android:id="@+id/nav_barter_logout"
                android:icon="@mipmap/ic_barter_logout"
                android:title="Log Out" />
        </menu>
    </item>



</menu>