...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"> </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/outgoing_quote_recycler_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/outgoing_quote_content_frame"
        app:layout_constraintRight_toRightOf="@+id/outgoing_quote_content_frame"
        app:layout_constraintTop_toTopOf="@+id/outgoing_quote_content_frame"
...
