<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jason.barterworld.SelfAdminActivity">


    <FrameLayout
        android:id="@+id/content_frame_admin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_constraintBottom_creator="1"


        tools:layout_constraintLeft_creator="1"

        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"

        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"> </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/post_recycler_list_admin"
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintTop_toTopOf="@+id/content_frame_admin"
        app:layout_constraintBottom_toBottomOf="@+id/content_frame_admin"


        tools:layout_constraintLeft_creator="1"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        ></android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>
