...
                    tools:layout_conversion_absoluteX="166dp"
                    tools:layout_conversion_absoluteY="429dp"
                    android:layout_marginStart="2dp" />


                <TextView
                    android:id="@+id/txt_desc_admin"
                    android:layout_width="190dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:hint="@string/barter_self_admin_row_hint_description"
                    android:inputType="textMultiLine"
...
